Tue Oct 19 18:54:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
          Fixed memory leaks, *always* when you get a reference from the
          context, first assign it to a _var before using it, else you get
          a memory leak

Tue Oct 19 18:33:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Servants/Home_Servant_Impl_T.cpp:
          Tracing fixes and memory leak fixes

Tue Oct 19 17:58:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Port_Activator_T.h:
        * ciao/Servants/Port_Activator_T.cpp:
          Fixed memory leaks

        * ciao/Servants/Session/Servant_Impl_T.h:
          Layout changes

Tue Oct 19 13:46:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/Event_MemLeakDetection_Test/descriptors/Listen.cdp:
        * connectors/dds4ccm/tests/MemLeakDetection/State_MemLeakDetection_Test/descriptors/Listen.cdp:
          Resolved errors in deployment plan.

Tue Oct 19 13:18:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/Event_MemLeakDetection_Test/descriptors/Listen.cdp:
        * connectors/dds4ccm/tests/MemLeakDetection/State_MemLeakDetection_Test/descriptors/Listen.cdp:
          Added to explicitly test memory leaks in a listener.

Tue Oct 19 12:37:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.pl:
          Fixed typo

Tue Oct 19 12:40:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/MemLeakDetection/*: